# obilang

./: .gitignore  LICENSE  Makefile  README.md  TRAINING_QUICKSTART.md  pyproject.toml
configs/: smoke.yaml
configs/language_pairs/: en-uk.yaml
configs/models/: large.yaml  medium.yaml  small.yaml
configs/training/: default.yaml  low_vram.yaml
datasets/en-uk/: README.md
datasets/en-uk/metadata/: benchmark.jsonl
docker/: Dockerfile  compose.yaml
docs/: architecture.md
requirements/: base.txt  dev.txt  gpu.txt
scripts/: smoke_test.ps1  smoke_test.sh
src/nmt/: __init__.py  cli.py
src/nmt/api/: __init__.py  app.py
src/nmt/config/: __init__.py  loader.py  schema.py
src/nmt/data/: __init__.py  pipeline.py  readers.py  records.py
src/nmt/evaluation/: __init__.py  metrics.py  runner.py
src/nmt/export/: __init__.py  portable.py  torchscript.py
src/nmt/fine_tuning/: __init__.py  replay.py
src/nmt/inference/: __init__.py  service.py
src/nmt/model/: __init__.py  layers.py  loss.py  transformer.py
src/nmt/monitoring/: __init__.py  store.py
src/nmt/registry/: __init__.py  local.py
src/nmt/tokenization/: __init__.py  sentencepiece.py
src/nmt/training/: __init__.py  checkpoint.py  data.py  device.py  experiment.py  trainer.py
src/nmt/utils/: __init__.py  io.py  logging.py  paths.py  reproducibility.py
tests/: conftest.py
tests/integration/: test_data_tokenizer_cli.py
tests/smoke/: test_complete_pipeline.py
tests/unit/: test_config_and_data.py  test_metrics_and_replay.py  test_model.py  test_registry_checkpoint.py
ui/: app.py
(+4 files in other folders)
