[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "from-scratch-nmt"
version = "0.1.0"
description = "Local-first bilingual neural machine translation from random weights"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "NMT Platform contributors"}]
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "typer>=0.12",
  "sentencepiece>=0.2",
  "sacrebleu>=2.4",
  "filelock>=3.13",
  "psutil>=5.9",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
ui = ["streamlit>=1.32", "pandas>=2.0"]
dev = ["pytest>=8", "pytest-cov>=5", "httpx>=0.27", "ruff>=0.5"]

[project.scripts]
nmt = "nmt.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
